--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 </head>
 
 <body>
-    start
+    <header>
+        <a href="#" class="menu">
+            <ion-icon name="apps-outline"></ion-icon>
+        </a>
+        <a href="#" class="logo">logo</a>
+        <div class="search">
+            <input type="text" placeholder="Search">
+            <ion-icon name="search-outline"></ion-icon>
+        </div>
+    </header>
 
     <script src="assets/js/main.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
