03. js-sport-05. Banner section. Show, hide menu.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="#" class="menu">
+        <a href="#" class="menu" onCLick="toggleNav();">
             <ion-icon name="apps-outline"></ion-icon>
         </a>
         <a href="#" class="logo">logo</a>
@@ -19,6 +19,23 @@
             <ion-icon name="search-outline"></ion-icon>
         </div>
     </header>
+
+    <div class="banner">
+        <ul class="nav">
+            <li>
+                <a href="#">Health</a>
+            </li>
+            <li>
+                <a href="#">Fitness</a>
+            </li>
+            <li>
+                <a href="#">Workout</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+    </div>
 
     <script src="assets/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
