05. js-sport-05. Banner section. Content.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,18 @@
                 <div class="swiper-button-next"></div>
             </div>
         </div>
+
+        <div class="content">
+            <h2>Start Shining</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quod vitae ratione blanditiis sunt optio consequuntur
+                repudiandae cupiditate, est culpa ipsa beatae hic illum
+                illo cum pariatur sit rem quaerat nostrum quasi labore
+                deserunt adipisci! Quas maxime accusantium pariatur.
+            </p>
+            <a href="#">Join Us</a>
+        </div>
     </div>
 
     <script src="assets/js/main.js"></script>
