06. js-sport-05. Banner section. Watermark Titles.

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
             </p>
             <a href="#">Join Us</a>
         </div>
+
+        <h1 class="title-left">Fitness</h1>
+        <h1 class="title-right">Life Style</h1>
     </div>
 
     <script src="assets/js/main.js"></script>
