07. js-sport-05. Banner section. Video.

--- a/index.html
+++ b/index.html
@@ -72,11 +72,42 @@
                 illo cum pariatur sit rem quaerat nostrum quasi labore
                 deserunt adipisci! Quas maxime accusantium pariatur.
             </p>
-            <a href="#">Join Us</a>
+            <a href="#" onClick="toggleVideo();">Join Us</a>
         </div>
 
         <h1 class="title-left">Fitness</h1>
         <h1 class="title-right">Life Style</h1>
+
+        <video src="./assets/videos/fitness-1.mp4" class="bg-video" muted loop autoplay></video>
+
+        <div class="video">
+            <div class="services">
+                <h3>Health</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit
+                    impedit vitae non natus ipsa dolore maiores sunt.
+                </p>
+            </div>
+            <div class="services">
+                <h3>Fitness</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit
+                    impedit vitae non natus ipsa dolore maiores sunt.
+                </p>
+            </div>
+            <div class="services">
+                <h3>Workout</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit
+                    impedit vitae non natus ipsa dolore maiores sunt.
+                </p>
+            </div>
+            <video src="./assets/videos/fitness-1.mp4" muted loop autoplay></video>
+            <a href="#" class="play" onClick="toggleVideo();">
+                <ion-icon class="open" name="play-circle-outline"></ion-icon>
+                <ion-icon class="close" name="close-circle-outline"></ion-icon>
+            </a>
+        </div>
     </div>
 
     <script src="assets/js/main.js"></script>
