08. js-sport-05. Banner section. Form.

--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
                 <ion-icon class="close" name="close-circle-outline"></ion-icon>
             </a>
         </div>
+
+        <form class="">
+            <h2>Ready For Joing Us</h2>
+            <input type="text" placeholder="Username">
+            <input type="text" placeholder="Email Address">
+            <input type="password" placeholder="Create Password">
+            <input type="password" placeholder="Confirm Password">
+            <input type="submit" value="Sign Up">
+            <p class="signup">
+                Already have an account? <a href="#">Sign In</a>
+            </p>
+        </form>
     </div>
 
     <script src="assets/js/main.js"></script>
