--- a/index.html
+++ b/index.html
@@ -122,6 +122,24 @@
         </form>
     </div>
 
+    <ul class="sci">
+        <li>
+            <a href="#">
+                <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <ion-icon name="logo-instagram"></ion-icon>
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                <ion-icon name="logo-youtube"></ion-icon>
+            </a>
+        </li>
+    </ul>
+
     <script src="assets/js/main.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
